@@ -54,7 +54,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -75,62 +74,64 @@ import com.aowagie.text.pdf.codec.Base64;
  */
 public class AcroFields {
 
-    private final PdfReader reader;
-    private final PdfWriter writer;
-    private HashMap<String, Item> fields;
+    PdfReader reader;
+    PdfWriter writer;
+    HashMap<String, AcroFields.Item> fields;
     private int topFirst;
-    private HashMap<String, int[]> sigNames;
+    private HashMap sigNames;
     private boolean append;
-    private static final int DA_FONT = 0;
-    private static final int DA_SIZE = 1;
-    private static final int DA_COLOR = 2;
-    private final HashMap<Integer, BaseFont> extensionFonts = new LinkedHashMap<Integer, BaseFont>();
+    public static final int DA_FONT = 0;
+    public static final int DA_SIZE = 1;
+    public static final int DA_COLOR = 2;
+    private final HashMap extensionFonts = new HashMap();
     private XfaForm xfa;
 
     /**
      * A field type invalid or not found.
      */
-    private static final int FIELD_TYPE_NONE = 0;
+    public static final int FIELD_TYPE_NONE = 0;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_PUSHBUTTON = 1;
+    public static final int FIELD_TYPE_PUSHBUTTON = 1;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_CHECKBOX = 2;
+    public static final int FIELD_TYPE_CHECKBOX = 2;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_RADIOBUTTON = 3;
+    public static final int FIELD_TYPE_RADIOBUTTON = 3;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_TEXT = 4;
+    public static final int FIELD_TYPE_TEXT = 4;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_LIST = 5;
+    public static final int FIELD_TYPE_LIST = 5;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_COMBO = 6;
+    public static final int FIELD_TYPE_COMBO = 6;
 
     /**
      * A field type.
      */
-    private static final int FIELD_TYPE_SIGNATURE = 7;
+    public static final int FIELD_TYPE_SIGNATURE = 7;
+
+    private boolean lastWasString;
 
     /** Holds value of property generateAppearances. */
     private boolean generateAppearances = true;
 
-    private final HashMap localFonts = new LinkedHashMap();
+    private final HashMap localFonts = new HashMap();
 
     private float extraMarginLeft;
     private float extraMarginTop;
@@ -151,8 +152,8 @@ public class AcroFields {
         fill();
     }
 
-    private void fill() {
-        this.fields = new LinkedHashMap<String, Item>();
+    void fill() {
+        this.fields = new HashMap();
         final PdfDictionary top = (PdfDictionary)PdfReader.getPdfObjectRelease(this.reader.getCatalog().get(PdfName.ACROFORM));
         if (top == null) {
 			return;
@@ -180,14 +181,14 @@ public class AcroFields {
                 final PdfDictionary widget = annot;
                 final PdfDictionary dic = new PdfDictionary();
                 dic.putAll(annot);
-                String name = ""; //$NON-NLS-1$
+                String name = "";
                 PdfDictionary value = null;
                 PdfObject lastV = null;
                 while (annot != null) {
                     dic.mergeDifferent(annot);
                     final PdfString t = annot.getAsString(PdfName.T);
                     if (t != null) {
-						name = t.toUnicodeString() + "." + name; //$NON-NLS-1$
+						name = t.toUnicodeString() + "." + name;
 					}
                     if (lastV == null && annot.get(PdfName.V) != null) {
 						lastV = PdfReader.getPdfObjectRelease(annot.get(PdfName.V));
@@ -225,14 +226,7 @@ public class AcroFields {
         }
         // some tools produce invisible signatures without an entry in the page annotation array
         // look for a single level annotation
-
-        final PdfNumber sigFlags;
-        if (top != null) {
-        	sigFlags = top.getAsNumber(PdfName.SIGFLAGS);
-        }
-        else {
-        	sigFlags = null;
-        }
+        final PdfNumber sigFlags = top.getAsNumber(PdfName.SIGFLAGS);
         if (sigFlags == null || (sigFlags.intValue() & 1) != 1) {
 			return;
 		}
@@ -271,7 +265,55 @@ public class AcroFields {
         }
     }
 
-
+    /**
+     * Gets the list of appearance names. Use it to get the names allowed
+     * with radio and checkbox fields. If the /Opt key exists the values will
+     * also be included. The name 'Off' may also be valid
+     * even if not returned in the list.
+     *
+     * @param fieldName the fully qualified field name
+     * @return the list of names or <CODE>null</CODE> if the field does not exist
+     */
+    public String[] getAppearanceStates(final String fieldName) {
+        final Item fd = this.fields.get(fieldName);
+        if (fd == null) {
+			return null;
+		}
+        final HashMap names = new HashMap();
+        final PdfDictionary vals = fd.getValue(0);
+        final PdfString stringOpt = vals.getAsString( PdfName.OPT );
+        if (stringOpt != null) {
+        	names.put(stringOpt.toUnicodeString(), null);
+        }
+        else {
+            final PdfArray arrayOpt = vals.getAsArray(PdfName.OPT);
+            if (arrayOpt != null) {
+            	for (int k = 0; k < arrayOpt.size(); ++k) {
+            		final PdfString valStr = arrayOpt.getAsString( k );
+            		if (valStr != null) {
+						names.put(valStr.toUnicodeString(), null);
+					}
+            	}
+            }
+        }
+        for (int k = 0; k < fd.size(); ++k) {
+            PdfDictionary dic = fd.getWidget( k );
+            dic = dic.getAsDict(PdfName.AP);
+            if (dic == null) {
+				continue;
+			}
+            dic = dic.getAsDict(PdfName.N);
+            if (dic == null) {
+				continue;
+			}
+            for (final Object element : dic.getKeys()) {
+                final String name = PdfName.decodeName(((PdfName)element).toString());
+                names.put(name, null);
+            }
+        }
+        final String out[] = new String[names.size()];
+        return (String[])names.keySet().toArray(out);
+    }
 
     private String[] getListOption(final String fieldName, final int idx) {
         final Item fd = getFieldItem(fieldName);
@@ -296,7 +338,7 @@ public class AcroFields {
 				}
             }
             catch (final Exception e) {
-                ret[k] = ""; //$NON-NLS-1$
+                ret[k] = "";
             }
         }
         return ret;
@@ -310,13 +352,79 @@ public class AcroFields {
      * @param fieldName the field name
      * @return the list of export option values from fields of type list or combo
      */
-    private String[] getListOptionExport(final String fieldName) {
+    public String[] getListOptionExport(final String fieldName) {
         return getListOption(fieldName, 0);
     }
 
+    /**
+     * Gets the list of display option values from fields of type list or combo.
+     * If the field doesn't exist or the field type is not list or combo it will return
+     * <CODE>null</CODE>.
+     *
+     * @param fieldName the field name
+     * @return the list of export option values from fields of type list or combo
+     */
+    public String[] getListOptionDisplay(final String fieldName) {
+        return getListOption(fieldName, 1);
+    }
 
-
-
+    /**
+     * Sets the option list for fields of type list or combo. One of <CODE>exportValues</CODE>
+     * or <CODE>displayValues</CODE> may be <CODE>null</CODE> but not both. This method will only
+     * set the list but will not set the value or appearance. For that, calling <CODE>setField()</CODE>
+     * is required.
+     * <p>
+     * An example:
+     * <p>
+     * <PRE>
+     * PdfReader pdf = new PdfReader("input.pdf");
+     * PdfStamper stp = new PdfStamper(pdf, new FileOutputStream("output.pdf"));
+     * AcroFields af = stp.getAcroFields();
+     * af.setListOption("ComboBox", new String[]{"a", "b", "c"}, new String[]{"first", "second", "third"});
+     * af.setField("ComboBox", "b");
+     * stp.close();
+     * </PRE>
+     *
+     * @param fieldName the field name
+     * @param exportValues the export values
+     * @param displayValues the display values
+     * @return <CODE>true</CODE> if the operation succeeded, <CODE>false</CODE> otherwise
+     */
+    public boolean setListOption(final String fieldName, final String[] exportValues, final String[] displayValues) {
+        if (exportValues == null && displayValues == null) {
+			return false;
+		}
+        if (exportValues != null && displayValues != null && exportValues.length != displayValues.length) {
+			throw new IllegalArgumentException("The export and the display array must have the same size.");
+		}
+        final int ftype = getFieldType(fieldName);
+        if (ftype != FIELD_TYPE_COMBO && ftype != FIELD_TYPE_LIST) {
+			return false;
+		}
+        final Item fd = this.fields.get(fieldName);
+        String[] sing = null;
+        if (exportValues == null && displayValues != null) {
+			sing = displayValues;
+		} else if (exportValues != null && displayValues == null) {
+			sing = exportValues;
+		}
+        final PdfArray opt = new PdfArray();
+        if (sing != null) {
+            for (final String element : sing) {
+				opt.add(new PdfString(element, PdfObject.TEXT_UNICODE));
+			}
+        }
+        else {
+            for (int k = 0; k < exportValues.length; ++k) {
+                final PdfArray a = new PdfArray();
+                a.add(new PdfString(exportValues[k], PdfObject.TEXT_UNICODE));
+                a.add(new PdfString(displayValues[k], PdfObject.TEXT_UNICODE));
+                opt.add(a);
+            }
+        }
+        fd.writeToAll( PdfName.OPT, opt, Item.WRITE_VALUE | Item.WRITE_MERGED );
+        return true;
+    }
 
     /**
      * Gets the field type. The type can be one of: <CODE>FIELD_TYPE_PUSHBUTTON</CODE>,
@@ -330,7 +438,7 @@ public class AcroFields {
      * @param fieldName the field name
      * @return the field type
      */
-    private int getFieldType(final String fieldName) {
+    public int getFieldType(final String fieldName) {
         final Item fd = getFieldItem(fieldName);
         if (fd == null) {
 			return FIELD_TYPE_NONE;
@@ -351,8 +459,9 @@ public class AcroFields {
 			}
             if ((ff & PdfFormField.FF_RADIO) != 0) {
 				return FIELD_TYPE_RADIOBUTTON;
+			} else {
+				return FIELD_TYPE_CHECKBOX;
 			}
-			return FIELD_TYPE_CHECKBOX;
         }
         else if (PdfName.TX.equals(type)) {
             return FIELD_TYPE_TEXT;
@@ -360,8 +469,9 @@ public class AcroFields {
         else if (PdfName.CH.equals(type)) {
             if ((ff & PdfFormField.FF_COMBO) != 0) {
 				return FIELD_TYPE_COMBO;
+			} else {
+				return FIELD_TYPE_LIST;
 			}
-			return FIELD_TYPE_LIST;
         }
         else if (PdfName.SIG.equals(type)) {
             return FIELD_TYPE_SIGNATURE;
@@ -369,14 +479,70 @@ public class AcroFields {
         return FIELD_TYPE_NONE;
     }
 
+    /**
+     * Export the fields as a FDF.
+     *
+     * @param writer the FDF writer
+     */
+    public void exportAsFdf(final FdfWriter writer) {
+        for (final Object element : this.fields.entrySet()) {
+            final Map.Entry entry = (Map.Entry)element;
+            final Item item = (Item)entry.getValue();
+            final String name = (String)entry.getKey();
+            final PdfObject v = item.getMerged(0).get(PdfName.V);
+            if (v == null) {
+				continue;
+			}
+            final String value = getField(name);
+            if (this.lastWasString) {
+				writer.setFieldAsString(name, value);
+			} else {
+				writer.setFieldAsName(name, value);
+			}
+        }
+    }
 
+    /**
+     * Renames a field. Only the last part of the name can be renamed. For example,
+     * if the original field is "ab.cd.ef" only the "ef" part can be renamed.
+     *
+     * @param oldName the old field name
+     * @param newName the new field name
+     * @return <CODE>true</CODE> if the renaming was successful, <CODE>false</CODE>
+     * otherwise
+     */
+    public boolean renameField(final String oldName, String newName) {
+        final int idx1 = oldName.lastIndexOf('.') + 1;
+        final int idx2 = newName.lastIndexOf('.') + 1;
+        if (idx1 != idx2) {
+			return false;
+		}
+        if (!oldName.substring(0, idx1).equals(newName.substring(0, idx2))) {
+			return false;
+		}
+        if (this.fields.containsKey(newName)) {
+			return false;
+		}
+        final Item item = this.fields.get(oldName);
+        if (item == null) {
+			return false;
+		}
+        newName = newName.substring(idx2);
+        final PdfString ss = new PdfString(newName, PdfObject.TEXT_UNICODE);
 
+        item.writeToAll( PdfName.T, ss, Item.WRITE_VALUE | Item.WRITE_MERGED);
+        item.markUsed( this, Item.WRITE_VALUE );
 
+        this.fields.remove(oldName);
+        this.fields.put(newName, item);
 
-    private static Object[] splitDAelements(final String da) {
+        return true;
+    }
+
+    public static Object[] splitDAelements(final String da) {
         try {
             final PRTokeniser tk = new PRTokeniser(PdfEncodings.convertToBytes(da, null));
-            final ArrayList<String> stack = new ArrayList<String>();
+            final ArrayList stack = new ArrayList();
             final Object ret[] = new Object[3];
             while (tk.nextToken()) {
                 if (tk.getTokenType() == PRTokeniser.TK_COMMENT) {
@@ -384,34 +550,34 @@ public class AcroFields {
 				}
                 if (tk.getTokenType() == PRTokeniser.TK_OTHER) {
                     final String operator = tk.getStringValue();
-                    if (operator.equals("Tf")) { //$NON-NLS-1$
+                    if (operator.equals("Tf")) {
                         if (stack.size() >= 2) {
                             ret[DA_FONT] = stack.get(stack.size() - 2);
-                            ret[DA_SIZE] = Float.valueOf(stack.get(stack.size() - 1));
+                            ret[DA_SIZE] = new Float((String)stack.get(stack.size() - 1));
                         }
                     }
-                    else if (operator.equals("g")) { //$NON-NLS-1$
+                    else if (operator.equals("g")) {
                         if (stack.size() >= 1) {
-                            final float gray = Float.valueOf(stack.get(stack.size() - 1)).floatValue();
+                            final float gray = new Float((String)stack.get(stack.size() - 1)).floatValue();
                             if (gray != 0) {
 								ret[DA_COLOR] = new GrayColor(gray);
 							}
                         }
                     }
-                    else if (operator.equals("rg")) { //$NON-NLS-1$
+                    else if (operator.equals("rg")) {
                         if (stack.size() >= 3) {
-                            final float red = Float.valueOf(stack.get(stack.size() - 3)).floatValue();
-                            final float green = Float.valueOf(stack.get(stack.size() - 2)).floatValue();
-                            final float blue = Float.valueOf(stack.get(stack.size() - 1)).floatValue();
+                            final float red = new Float((String)stack.get(stack.size() - 3)).floatValue();
+                            final float green = new Float((String)stack.get(stack.size() - 2)).floatValue();
+                            final float blue = new Float((String)stack.get(stack.size() - 1)).floatValue();
                             ret[DA_COLOR] = new Color(red, green, blue);
                         }
                     }
-                    else if (operator.equals("k")) { //$NON-NLS-1$
+                    else if (operator.equals("k")) {
                         if (stack.size() >= 4) {
-                            final float cyan = Float.valueOf(stack.get(stack.size() - 4)).floatValue();
-                            final float magenta = Float.valueOf(stack.get(stack.size() - 3)).floatValue();
-                            final float yellow = Float.valueOf(stack.get(stack.size() - 2)).floatValue();
-                            final float black = Float.valueOf(stack.get(stack.size() - 1)).floatValue();
+                            final float cyan = new Float((String)stack.get(stack.size() - 4)).floatValue();
+                            final float magenta = new Float((String)stack.get(stack.size() - 3)).floatValue();
+                            final float yellow = new Float((String)stack.get(stack.size() - 2)).floatValue();
+                            final float black = new Float((String)stack.get(stack.size() - 1)).floatValue();
                             ret[DA_COLOR] = new CMYKColor(cyan, magenta, yellow, black);
                         }
                     }
@@ -427,7 +593,7 @@ public class AcroFields {
         }
     }
 
-    private void decodeGenericDictionary(final PdfDictionary merged, final BaseField tx) {
+    public void decodeGenericDictionary(final PdfDictionary merged, final BaseField tx) throws IOException, DocumentException {
         int flags = 0;
         // the text size and color
         final PdfString da = merged.getAsString(PdfName.DA);
@@ -449,8 +615,8 @@ public class AcroFields {
                             final PRIndirectReference por = (PRIndirectReference)po;
                             final BaseFont bp = new DocumentFont((PRIndirectReference)po);
                             tx.setFont(bp);
-                            final Integer porkey = Integer.valueOf(por.getNumber());
-                            BaseFont porf = this.extensionFonts.get(porkey);
+                            final Integer porkey = new Integer(por.getNumber());
+                            BaseFont porf = (BaseFont)this.extensionFonts.get(porkey);
                             if (porf == null) {
                                 if (!this.extensionFonts.containsKey(porkey)) {
                                     final PdfDictionary fo = (PdfDictionary)PdfReader.getPdfObject(po);
@@ -465,7 +631,7 @@ public class AcroFields {
                                         }
                                         else {
                                             try {
-                                                porf = BaseFont.createFont("font.ttf", BaseFont.IDENTITY_H, true, false, PdfReader.getStreamBytes(prs), null); //$NON-NLS-1$
+                                                porf = BaseFont.createFont("font.ttf", BaseFont.IDENTITY_H, true, false, PdfReader.getStreamBytes(prs), null);
                                             }
                                             catch (final Exception e) {
                                             }
@@ -481,10 +647,10 @@ public class AcroFields {
                         else {
                             BaseFont bf = (BaseFont)this.localFonts.get(dab[DA_FONT]);
                             if (bf == null) {
-                                final String fn[] = stdFieldFontNames.get(dab[DA_FONT]);
+                                final String fn[] = (String[])stdFieldFontNames.get(dab[DA_FONT]);
                                 if (fn != null) {
                                     try {
-                                        String enc = "winansi"; //$NON-NLS-1$
+                                        String enc = "winansi";
                                         if (fn.length > 1) {
 											enc = fn[1];
 										}
@@ -525,11 +691,11 @@ public class AcroFields {
         tx.setVisibility(BaseField.VISIBLE_BUT_DOES_NOT_PRINT);
         if (nfl != null) {
             flags = nfl.intValue();
-            if ((flags & PdfAnnotation.FLAGS_PRINT) != 0 && (flags & PdfAnnotation.FLAGS_HIDDEN) != 0) {
+            if ((flags & PdfFormField.FLAGS_PRINT) != 0 && (flags & PdfFormField.FLAGS_HIDDEN) != 0) {
 				tx.setVisibility(BaseField.HIDDEN);
-			} else if ((flags & PdfAnnotation.FLAGS_PRINT) != 0 && (flags & PdfAnnotation.FLAGS_NOVIEW) != 0) {
+			} else if ((flags & PdfFormField.FLAGS_PRINT) != 0 && (flags & PdfFormField.FLAGS_NOVIEW) != 0) {
 				tx.setVisibility(BaseField.HIDDEN_BUT_PRINTABLE);
-			} else if ((flags & PdfAnnotation.FLAGS_PRINT) != 0) {
+			} else if ((flags & PdfFormField.FLAGS_PRINT) != 0) {
 				tx.setVisibility(BaseField.VISIBLE);
 			}
         }
@@ -588,7 +754,7 @@ public class AcroFields {
         }
     }
 
-    private PdfAppearance getAppearance(final PdfDictionary merged, String text, final String fieldName) throws IOException, DocumentException {
+    PdfAppearance getAppearance(final PdfDictionary merged, String text, final String fieldName) throws IOException, DocumentException {
         this.topFirst = 0;
         TextField tx = null;
         if (this.fieldCache == null || !this.fieldCache.containsKey(fieldName)) {
@@ -609,7 +775,7 @@ public class AcroFields {
 			}
         }
         else {
-            tx = this.fieldCache.get(fieldName);
+            tx = (TextField)this.fieldCache.get(fieldName);
             tx.setWriter(this.writer);
         }
         final PdfName fieldType = merged.getAsName(PdfName.FT);
@@ -618,7 +784,7 @@ public class AcroFields {
             return tx.getAppearance();
         }
         if (!PdfName.CH.equals(fieldType)) {
-			throw new DocumentException("An appearance was requested without a variable text field."); //$NON-NLS-1$
+			throw new DocumentException("An appearance was requested without a variable text field.");
 		}
         final PdfArray opt = merged.getAsArray(PdfName.OPT);
         int flags = 0;
@@ -670,7 +836,7 @@ public class AcroFields {
         return app;
     }
 
-    private static Color getMKColor(final PdfArray ar) {
+    Color getMKColor(final PdfArray ar) {
         if (ar == null) {
 			return null;
 		}
@@ -686,6 +852,442 @@ public class AcroFields {
         }
     }
 
+    /**
+     * Gets the field value.
+     *
+     * @param name the fully qualified field name
+     * @return the field value
+     */
+    public String getField(String name) {
+        if (this.xfa.isXfaPresent()) {
+            name = this.xfa.findFieldName(name, this);
+            if (name == null) {
+				return null;
+			}
+            name = XfaForm.Xml2Som.getShortName(name);
+            return XfaForm.getNodeText(this.xfa.findDatasetsNode(name));
+        }
+        final Item item = this.fields.get(name);
+        if (item == null) {
+			return null;
+		}
+        this.lastWasString = false;
+        final PdfDictionary mergedDict = item.getMerged( 0 );
+
+        // Jose A. Rodriguez posted a fix to the mailing list (May 11, 2009)
+        // explaining that the value can also be a stream value
+        // the fix was made against an old iText version. Bruno adapted it.
+        final PdfObject v = PdfReader.getPdfObject(mergedDict.get(PdfName.V));
+        if (v == null) {
+			return "";
+		}
+        if (v instanceof PRStream) {
+                byte[] valBytes;
+				try {
+					valBytes = PdfReader.getStreamBytes((PRStream)v);
+	                return new String(valBytes);
+				} catch (final IOException e) {
+					throw new ExceptionConverter(e);
+				}
+        }
+
+        final PdfName type = mergedDict.getAsName(PdfName.FT);
+        if (PdfName.BTN.equals(type)) {
+            final PdfNumber ff = mergedDict.getAsNumber(PdfName.FF);
+            int flags = 0;
+            if (ff != null) {
+				flags = ff.intValue();
+			}
+            if ((flags & PdfFormField.FF_PUSHBUTTON) != 0) {
+				return "";
+			}
+            String value = "";
+            if (v instanceof PdfName) {
+				value = PdfName.decodeName(v.toString());
+			} else if (v instanceof PdfString) {
+				value = ((PdfString)v).toUnicodeString();
+			}
+            final PdfArray opts = item.getValue(0).getAsArray(PdfName.OPT);
+            if (opts != null) {
+                int idx = 0;
+                try {
+                    idx = Integer.parseInt(value);
+                    final PdfString ps = opts.getAsString(idx);
+                    value = ps.toUnicodeString();
+                    this.lastWasString = true;
+                }
+                catch (final Exception e) {
+                }
+            }
+            return value;
+        }
+        if (v instanceof PdfString) {
+            this.lastWasString = true;
+            return ((PdfString)v).toUnicodeString();
+        } else if (v instanceof PdfName) {
+            return PdfName.decodeName(v.toString());
+        } else {
+			return "";
+		}
+    }
+
+    /**
+     * Gets the field values of a Choice field.
+     *
+     * @param name the fully qualified field name
+     * @return the field value
+     * @since 2.1.3
+     */
+    public String[] getListSelection(final String name) {
+    	String[] ret;
+    	final String s = getField(name);
+    	if (s == null) {
+    		ret = new String[]{};
+    	}
+    	else {
+    		ret = new String[]{ s };
+    	}
+        final Item item = this.fields.get(name);
+        if (item == null) {
+			return ret;
+		}
+        //PdfName type = (PdfName)PdfReader.getPdfObject(((PdfDictionary)item.merged.get(0)).get(PdfName.FT));
+        //if (!PdfName.CH.equals(type)) {
+        //	return ret;
+        //}
+        final PdfArray values = item.getMerged(0).getAsArray(PdfName.I);
+        if (values == null) {
+			return ret;
+		}
+        ret = new String[values.size()];
+        final String[] options = getListOptionExport(name);
+        PdfNumber n;
+        int idx = 0;
+        for (final Iterator i = values.listIterator(); i.hasNext(); ) {
+        	n = (PdfNumber)i.next();
+        	ret[idx++] = options[n.intValue()];
+        }
+        return ret;
+    }
+
+
+    /**
+     * Sets a field property. Valid property names are:
+     * <p>
+     * <ul>
+     * <li>textfont - sets the text font. The value for this entry is a <CODE>BaseFont</CODE>.<br>
+     * <li>textcolor - sets the text color. The value for this entry is a <CODE>java.awt.Color</CODE>.<br>
+     * <li>textsize - sets the text size. The value for this entry is a <CODE>Float</CODE>.
+     * <li>bgcolor - sets the background color. The value for this entry is a <CODE>java.awt.Color</CODE>.
+     *     If <code>null</code> removes the background.<br>
+     * <li>bordercolor - sets the border color. The value for this entry is a <CODE>java.awt.Color</CODE>.
+     *     If <code>null</code> removes the border.<br>
+     * </ul>
+     *
+     * @param field the field name
+     * @param name the property name
+     * @param value the property value
+     * @param inst an array of <CODE>int</CODE> indexing into <CODE>AcroField.Item.merged</CODE> elements to process.
+     * Set to <CODE>null</CODE> to process all
+     * @return <CODE>true</CODE> if the property exists, <CODE>false</CODE> otherwise
+     */
+    public boolean setFieldProperty(final String field, final String name, final Object value, final int inst[]) {
+        if (this.writer == null) {
+			throw new RuntimeException("This AcroFields instance is read-only.");
+		}
+        try {
+            final Item item = this.fields.get(field);
+            if (item == null) {
+				return false;
+			}
+            final InstHit hit = new InstHit(inst);
+            PdfDictionary merged;
+            PdfString da;
+            if (name.equalsIgnoreCase("textfont")) {
+                for (int k = 0; k < item.size(); ++k) {
+                    if (hit.isHit(k)) {
+                        merged = item.getMerged( k );
+                        da = merged.getAsString(PdfName.DA);
+                        PdfDictionary dr = merged.getAsDict(PdfName.DR);
+                        if (da != null && dr != null) {
+                            final Object dao[] = splitDAelements(da.toUnicodeString());
+                            final PdfAppearance cb = new PdfAppearance();
+                            if (dao[DA_FONT] != null) {
+                                final BaseFont bf = (BaseFont)value;
+                                PdfName psn = (PdfName)PdfAppearance.stdFieldFontNames.get(bf.getPostscriptFontName());
+                                if (psn == null) {
+                                    psn = new PdfName(bf.getPostscriptFontName());
+                                }
+                                PdfDictionary fonts = dr.getAsDict(PdfName.FONT);
+                                if (fonts == null) {
+                                    fonts = new PdfDictionary();
+                                    dr.put(PdfName.FONT, fonts);
+                                }
+                                final PdfIndirectReference fref = (PdfIndirectReference)fonts.get(psn);
+                                final PdfDictionary top = this.reader.getCatalog().getAsDict(PdfName.ACROFORM);
+                                markUsed(top);
+                                dr = top.getAsDict(PdfName.DR);
+                                if (dr == null) {
+                                    dr = new PdfDictionary();
+                                    top.put(PdfName.DR, dr);
+                                }
+                                markUsed(dr);
+                                PdfDictionary fontsTop = dr.getAsDict(PdfName.FONT);
+                                if (fontsTop == null) {
+                                    fontsTop = new PdfDictionary();
+                                    dr.put(PdfName.FONT, fontsTop);
+                                }
+                                markUsed(fontsTop);
+                                final PdfIndirectReference frefTop = (PdfIndirectReference)fontsTop.get(psn);
+                                if (frefTop != null) {
+                                    if (fref == null) {
+										fonts.put(psn, frefTop);
+									}
+                                }
+                                else if (fref == null) {
+                                    FontDetails fd;
+                                    if (bf.getFontType() == BaseFont.FONT_TYPE_DOCUMENT) {
+                                        fd = new FontDetails(null, ((DocumentFont)bf).getIndirectReference(), bf);
+                                    }
+                                    else {
+                                        bf.setSubset(false);
+                                        fd = this.writer.addSimple(bf);
+                                        this.localFonts.put(psn.toString().substring(1), bf);
+                                    }
+                                    fontsTop.put(psn, fd.getIndirectReference());
+                                    fonts.put(psn, fd.getIndirectReference());
+                                }
+                                final ByteBuffer buf = cb.getInternalBuffer();
+                                buf.append(psn.getBytes()).append(' ').append(((Float)dao[DA_SIZE]).floatValue()).append(" Tf ");
+                                if (dao[DA_COLOR] != null) {
+									cb.setColorFill((Color)dao[DA_COLOR]);
+								}
+                                final PdfString s = new PdfString(cb.toString());
+                                item.getMerged(k).put(PdfName.DA, s);
+                                item.getWidget(k).put(PdfName.DA, s);
+                                markUsed(item.getWidget(k));
+                            }
+                        }
+                    }
+                }
+            }
+            else if (name.equalsIgnoreCase("textcolor")) {
+                for (int k = 0; k < item.size(); ++k) {
+                    if (hit.isHit(k)) {
+                        merged = item.getMerged( k );
+                        da = merged.getAsString(PdfName.DA);
+                        if (da != null) {
+                            final Object dao[] = splitDAelements(da.toUnicodeString());
+                            final PdfAppearance cb = new PdfAppearance();
+                            if (dao[DA_FONT] != null) {
+                                final ByteBuffer buf = cb.getInternalBuffer();
+                                buf.append(new PdfName((String)dao[DA_FONT]).getBytes()).append(' ').append(((Float)dao[DA_SIZE]).floatValue()).append(" Tf ");
+                                cb.setColorFill((Color)value);
+                                final PdfString s = new PdfString(cb.toString());
+                                item.getMerged(k).put(PdfName.DA, s);
+                                item.getWidget(k).put(PdfName.DA, s);
+                                markUsed(item.getWidget(k));
+                            }
+                        }
+                    }
+                }
+            }
+            else if (name.equalsIgnoreCase("textsize")) {
+                for (int k = 0; k < item.size(); ++k) {
+                    if (hit.isHit(k)) {
+                        merged = item.getMerged( k );
+                        da = merged.getAsString(PdfName.DA);
+                        if (da != null) {
+                            final Object dao[] = splitDAelements(da.toUnicodeString());
+                            final PdfAppearance cb = new PdfAppearance();
+                            if (dao[DA_FONT] != null) {
+                                final ByteBuffer buf = cb.getInternalBuffer();
+                                buf.append(new PdfName((String)dao[DA_FONT]).getBytes()).append(' ').append(((Float)value).floatValue()).append(" Tf ");
+                                if (dao[DA_COLOR] != null) {
+									cb.setColorFill((Color)dao[DA_COLOR]);
+								}
+                                final PdfString s = new PdfString(cb.toString());
+                                item.getMerged(k).put(PdfName.DA, s);
+                                item.getWidget(k).put(PdfName.DA, s);
+                                markUsed(item.getWidget(k));
+                            }
+                        }
+                    }
+                }
+            }
+            else if (name.equalsIgnoreCase("bgcolor") || name.equalsIgnoreCase("bordercolor")) {
+                final PdfName dname = name.equalsIgnoreCase("bgcolor") ? PdfName.BG : PdfName.BC;
+                for (int k = 0; k < item.size(); ++k) {
+                    if (hit.isHit(k)) {
+                        merged = item.getMerged( k );
+                        PdfDictionary mk = merged.getAsDict(PdfName.MK);
+                        if (mk == null) {
+                            if (value == null) {
+								return true;
+							}
+                            mk = new PdfDictionary();
+                            item.getMerged(k).put(PdfName.MK, mk);
+                            item.getWidget(k).put(PdfName.MK, mk);
+                            markUsed(item.getWidget(k));
+                        } else {
+                            markUsed( mk );
+                        }
+                        if (value == null) {
+							mk.remove(dname);
+						} else {
+							mk.put(dname, PdfFormField.getMKColor((Color)value));
+						}
+                    }
+                }
+            } else {
+				return false;
+			}
+            return true;
+        }
+        catch (final Exception e) {
+            throw new ExceptionConverter(e);
+        }
+    }
+
+    /**
+     * Sets a field property. Valid property names are:
+     * <p>
+     * <ul>
+     * <li>flags - a set of flags specifying various characteristics of the field's widget annotation.
+     * The value of this entry replaces that of the F entry in the form's corresponding annotation dictionary.<br>
+     * <li>setflags - a set of flags to be set (turned on) in the F entry of the form's corresponding
+     * widget annotation dictionary. Bits equal to 1 cause the corresponding bits in F to be set to 1.<br>
+     * <li>clrflags - a set of flags to be cleared (turned off) in the F entry of the form's corresponding
+     * widget annotation dictionary. Bits equal to 1 cause the corresponding
+     * bits in F to be set to 0.<br>
+     * <li>fflags - a set of flags specifying various characteristics of the field. The value
+     * of this entry replaces that of the Ff entry in the form's corresponding field dictionary.<br>
+     * <li>setfflags - a set of flags to be set (turned on) in the Ff entry of the form's corresponding
+     * field dictionary. Bits equal to 1 cause the corresponding bits in Ff to be set to 1.<br>
+     * <li>clrfflags - a set of flags to be cleared (turned off) in the Ff entry of the form's corresponding
+     * field dictionary. Bits equal to 1 cause the corresponding bits in Ff
+     * to be set to 0.<br>
+     * </ul>
+     *
+     * @param field the field name
+     * @param name the property name
+     * @param value the property value
+     * @param inst an array of <CODE>int</CODE> indexing into <CODE>AcroField.Item.merged</CODE> elements to process.
+     * Set to <CODE>null</CODE> to process all
+     * @return <CODE>true</CODE> if the property exists, <CODE>false</CODE> otherwise
+     */
+    public boolean setFieldProperty(final String field, final String name, final int value, final int inst[]) {
+        if (this.writer == null) {
+			throw new RuntimeException("This AcroFields instance is read-only.");
+		}
+        final Item item = this.fields.get(field);
+        if (item == null) {
+			return false;
+		}
+        final InstHit hit = new InstHit(inst);
+        if (name.equalsIgnoreCase("flags")) {
+            final PdfNumber num = new PdfNumber(value);
+            for (int k = 0; k < item.size(); ++k) {
+                if (hit.isHit(k)) {
+                    item.getMerged(k).put(PdfName.F, num);
+                    item.getWidget(k).put(PdfName.F, num);
+                    markUsed(item.getWidget(k));
+                }
+            }
+        }
+        else if (name.equalsIgnoreCase("setflags")) {
+            for (int k = 0; k < item.size(); ++k) {
+                if (hit.isHit(k)) {
+                    PdfNumber num = item.getWidget(k).getAsNumber(PdfName.F);
+                    int val = 0;
+                    if (num != null) {
+						val = num.intValue();
+					}
+                    num = new PdfNumber(val | value);
+                    item.getMerged(k).put(PdfName.F, num);
+                    item.getWidget(k).put(PdfName.F, num);
+                    markUsed(item.getWidget(k));
+                }
+            }
+        }
+        else if (name.equalsIgnoreCase("clrflags")) {
+            for (int k = 0; k < item.size(); ++k) {
+                if (hit.isHit(k)) {
+                    final PdfDictionary widget = item.getWidget( k );
+                    PdfNumber num = widget.getAsNumber(PdfName.F);
+                    int val = 0;
+                    if (num != null) {
+						val = num.intValue();
+					}
+                    num = new PdfNumber(val & ~value);
+                    item.getMerged(k).put(PdfName.F, num);
+                    widget.put(PdfName.F, num);
+                    markUsed(widget);
+                }
+            }
+        }
+        else if (name.equalsIgnoreCase("fflags")) {
+            final PdfNumber num = new PdfNumber(value);
+            for (int k = 0; k < item.size(); ++k) {
+                if (hit.isHit(k)) {
+                    item.getMerged(k).put(PdfName.FF, num);
+                    item.getValue(k).put(PdfName.FF, num);
+                    markUsed(item.getValue(k));
+                }
+            }
+        }
+        else if (name.equalsIgnoreCase("setfflags")) {
+            for (int k = 0; k < item.size(); ++k) {
+                if (hit.isHit(k)) {
+                    final PdfDictionary valDict = item.getValue( k );
+                    PdfNumber num = valDict.getAsNumber( PdfName.FF );
+                    int val = 0;
+                    if (num != null) {
+						val = num.intValue();
+					}
+                    num = new PdfNumber(val | value);
+                    item.getMerged(k).put(PdfName.FF, num);
+                    valDict.put(PdfName.FF, num);
+                    markUsed(valDict);
+                }
+            }
+        }
+        else if (name.equalsIgnoreCase("clrfflags")) {
+            for (int k = 0; k < item.size(); ++k) {
+                if (hit.isHit(k)) {
+                    final PdfDictionary valDict = item.getValue( k );
+                    PdfNumber num = valDict.getAsNumber(PdfName.FF);
+                    int val = 0;
+                    if (num != null) {
+						val = num.intValue();
+					}
+                    num = new PdfNumber(val & ~value);
+                    item.getMerged(k).put(PdfName.FF, num);
+                    valDict.put(PdfName.FF, num);
+                    markUsed(valDict);
+                }
+            }
+        } else {
+			return false;
+		}
+        return true;
+    }
+
+    /**
+     * Merges an XML data structure into this form.
+     *
+     * @param n the top node of the data structure
+     * @throws java.io.IOException on error
+     * @throws com.lowagie.text.DocumentException o error
+     */
+    public void mergeXfaData(final Node n) throws IOException, DocumentException {
+        final XfaForm.Xml2SomDatasets data = new XfaForm.Xml2SomDatasets(n);
+        for (final Iterator it = data.getOrder().iterator(); it.hasNext();) {
+            final String name = (String)it.next();
+            final String text = XfaForm.getNodeText((Node)data.getName2Node().get(name));
+            setField(name, text);
+        }
+    }
 
     /**
      * Sets the fields by FDF merging.
@@ -727,7 +1329,23 @@ public class AcroFields {
         }
     }
 
-
+    /**
+     * Regenerates the field appearance.
+     * This is useful when you change a field property, but not its value,
+     * for instance form.setFieldProperty("f", "bgcolor", Color.BLUE, null);
+     * This won't have any effect, unless you use regenerateField("f") after changing
+     * the property.
+     *
+     * @param name the fully qualified field name or the partial name in the case of XFA forms
+     * @throws IOException on error
+     * @throws DocumentException on error
+     * @return <CODE>true</CODE> if the field was found and changed,
+     * <CODE>false</CODE> otherwise
+     */
+    public boolean regenerateField(final String name) throws IOException, DocumentException {
+    	final String value = getField(name);
+        return setField(name, value, value);
+    }
 
     /**
      * Sets the field value.
@@ -739,7 +1357,7 @@ public class AcroFields {
      * @return <CODE>true</CODE> if the field was found and changed,
      * <CODE>false</CODE> otherwise
      */
-    private boolean setField(final String name, final String value) throws IOException, DocumentException {
+    public boolean setField(final String name, final String value) throws IOException, DocumentException {
         return setField(name, value, null);
     }
 
@@ -758,9 +1376,9 @@ public class AcroFields {
      * @throws IOException on error
      * @throws DocumentException on error
      */
-    private boolean setField(String name, String value, String display) throws IOException, DocumentException {
+    public boolean setField(String name, String value, String display) throws IOException, DocumentException {
         if (this.writer == null) {
-			throw new DocumentException("This AcroFields instance is read-only."); //$NON-NLS-1$
+			throw new DocumentException("This AcroFields instance is read-only.");
 		}
         if (this.xfa.isXfaPresent()) {
             name = this.xfa.findFieldName(name, this);
@@ -849,7 +1467,7 @@ public class AcroFields {
                 return true;
             }
             final PdfName v = new PdfName(value);
-            final ArrayList<String> lopt = new ArrayList<String>();
+            final ArrayList lopt = new ArrayList();
             final PdfArray opts = item.getValue(0).getAsArray(PdfName.OPT);
             if (opts != null) {
                 for (int k = 0; k < opts.size(); ++k) {
@@ -907,7 +1525,7 @@ public class AcroFields {
      * @return	true only if the field value was changed
      * @since 2.1.4
      */
-	private boolean setListSelection(final String name, final String[] value) {
+	public boolean setListSelection(final String name, final String[] value) throws IOException, DocumentException {
         final Item item = getFieldItem(name);
         if (item == null) {
 			return false;
@@ -932,7 +1550,7 @@ public class AcroFields {
         return true;
 	}
 
-    private static boolean isInAP(final PdfDictionary dic, final PdfName check) {
+    boolean isInAP(final PdfDictionary dic, final PdfName check) {
         final PdfDictionary appDic = dic.getAsDict(PdfName.AP);
         if (appDic == null) {
 			return false;
@@ -947,7 +1565,7 @@ public class AcroFields {
      *
      * @return all the fields
      */
-    public HashMap<String, Item> getFields() {
+    public HashMap<String, AcroFields.Item> getFields() {
         return this.fields;
     }
 
@@ -958,7 +1576,7 @@ public class AcroFields {
      * @return the field structure or <CODE>null</CODE> if the field
      * does not exist
      */
-    Item getFieldItem(String name) {
+    public Item getFieldItem(String name) {
         if (this.xfa.isXfaPresent()) {
             name = this.xfa.findFieldName(name, this);
             if (name == null) {
@@ -974,7 +1592,7 @@ public class AcroFields {
      * @param name the name of the field
      * @return the long field name
      */
-    private String getTranslatedFieldName(String name) {
+    public String getTranslatedFieldName(String name) {
         if (this.xfa.isXfaPresent()) {
             final String namex = this.xfa.findFieldName(name, this);
             if (namex != null) {
@@ -1054,7 +1672,7 @@ public class AcroFields {
         return ret;
     }
 
-    private static int removeRefFromArray(final PdfArray array, final PdfObject refo) {
+    private int removeRefFromArray(final PdfArray array, final PdfObject refo) {
         if (refo == null || !refo.isIndirect()) {
 			return array.size();
 		}
@@ -1077,7 +1695,7 @@ public class AcroFields {
      * @param page the page to remove the fields from
      * @return <CODE>true</CODE> if any field was removed, <CODE>false otherwise</CODE>
      */
-    boolean removeFieldsFromPage(final int page) {
+    public boolean removeFieldsFromPage(final int page) {
         if (page < 1) {
 			return false;
 		}
@@ -1100,7 +1718,7 @@ public class AcroFields {
      * @param page the page to remove the field from or -1 to remove it from all the pages
      * @return <CODE>true</CODE> if the field exists, <CODE>false otherwise</CODE>
      */
-    private boolean removeField(final String name, final int page) {
+    public boolean removeField(final String name, final int page) {
         final Item item = getFieldItem(name);
         if (item == null) {
 			return false;
@@ -1157,7 +1775,15 @@ public class AcroFields {
         return true;
     }
 
-
+    /**
+     * Removes a field from the document.
+     *
+     * @param name the field name
+     * @return <CODE>true</CODE> if the field exists, <CODE>false otherwise</CODE>
+     */
+    public boolean removeField(final String name) {
+        return removeField(name, -1);
+    }
 
     /**
      * Gets the property generateAppearances.
@@ -1187,28 +1813,28 @@ public class AcroFields {
     }
 
     /** The field representations for retrieval and modification. */
-    static class Item {
+    public static class Item {
 
         /**
          * <CODE>writeToAll</CODE> constant.
          *
          *  @since 2.1.5
          */
-        private static final int WRITE_MERGED = 1;
+        public static final int WRITE_MERGED = 1;
 
         /**
          * <CODE>writeToAll</CODE> and <CODE>markUsed</CODE> constant.
          *
          *  @since 2.1.5
          */
-        private static final int WRITE_WIDGET = 2;
+        public static final int WRITE_WIDGET = 2;
 
         /**
          * <CODE>writeToAll</CODE> and <CODE>markUsed</CODE> constant.
          *
          *  @since 2.1.5
          */
-        private static final int WRITE_VALUE = 4;
+        public static final int WRITE_VALUE = 4;
 
         /**
          * This function writes the given key/value pair to all the instances
@@ -1220,7 +1846,7 @@ public class AcroFields {
          * @param value      if value is null, the key will be removed
          * @param writeFlags ORed together WRITE_* flags
          */
-        void writeToAll(final PdfName key, final PdfObject value, final int writeFlags) {
+        public void writeToAll(final PdfName key, final PdfObject value, final int writeFlags) {
             int i;
             PdfDictionary curDict = null;
             if ((writeFlags & WRITE_MERGED) != 0) {
@@ -1249,7 +1875,7 @@ public class AcroFields {
          * @since 2.1.5
          * @param writeFlags WRITE_MERGED is ignored
          */
-        void markUsed( final AcroFields parentFields, final int writeFlags ) {
+        public void markUsed( final AcroFields parentFields, final int writeFlags ) {
             if ((writeFlags & WRITE_VALUE) != 0) {
                 for (int i = 0; i < size(); ++i) {
                     parentFields.markUsed( getValue( i ) );
@@ -1269,7 +1895,7 @@ public class AcroFields {
          * @deprecated (will remove 'public' in the future)
          */
         @Deprecated
-		private final ArrayList<PdfDictionary> values = new ArrayList<PdfDictionary>();
+		public ArrayList values = new ArrayList();
 
         /**
          * An array of <CODE>PdfDictionary</CODE> with the widgets.
@@ -1277,7 +1903,7 @@ public class AcroFields {
          * @deprecated (will remove 'public' in the future)
          */
         @Deprecated
-		private final ArrayList<PdfDictionary> widgets = new ArrayList<PdfDictionary>();
+		public ArrayList widgets = new ArrayList();
 
         /**
          * An array of <CODE>PdfDictionary</CODE> with the widget references.
@@ -1285,7 +1911,7 @@ public class AcroFields {
          * @deprecated (will remove 'public' in the future)
          */
         @Deprecated
-		private final ArrayList<PdfIndirectReference> widget_refs = new ArrayList<PdfIndirectReference>();
+		public ArrayList widget_refs = new ArrayList();
 
         /**
          * An array of <CODE>PdfDictionary</CODE> with all the field
@@ -1294,7 +1920,7 @@ public class AcroFields {
          * @deprecated (will remove 'public' in the future)
          */
         @Deprecated
-		private final ArrayList<PdfDictionary> merged = new ArrayList<PdfDictionary>();
+		public ArrayList merged = new ArrayList();
 
         /**
          * An array of <CODE>Integer</CODE> with the page numbers where
@@ -1303,14 +1929,14 @@ public class AcroFields {
          * @deprecated (will remove 'public' in the future)
          */
         @Deprecated
-		private final ArrayList<Integer> page = new ArrayList<Integer>();
+		public ArrayList page = new ArrayList();
         /**
          * An array of <CODE>Integer</CODE> with the tab order of the field in the page.
          *
          * @deprecated (will remove 'public' in the future)
          */
         @Deprecated
-		private final ArrayList<Integer> tabOrder = new ArrayList<Integer>();
+		public ArrayList tabOrder = new ArrayList();
 
         /**
          * Preferred method of determining the number of instances
@@ -1319,7 +1945,7 @@ public class AcroFields {
          * @since 2.1.5
          * @return number of instances
          */
-        int size() {
+        public int size() {
             return this.values.size();
         }
 
@@ -1330,7 +1956,7 @@ public class AcroFields {
          * @since 2.1.5
          * @param killIdx
          */
-        private void remove(final int killIdx) {
+        void remove(final int killIdx) {
             this.values.remove(killIdx);
             this.widgets.remove(killIdx);
             this.widget_refs.remove(killIdx);
@@ -1346,8 +1972,8 @@ public class AcroFields {
          * @param idx instance index
          * @return dictionary storing this instance's value.  It may be shared across instances.
          */
-        PdfDictionary getValue(final int idx) {
-            return this.values.get(idx);
+        public PdfDictionary getValue(final int idx) {
+            return (PdfDictionary) this.values.get(idx);
         }
 
         /**
@@ -1367,8 +1993,8 @@ public class AcroFields {
          * @param idx instance index
          * @return The dictionary found in the appropriate page's Annot array.
          */
-        PdfDictionary getWidget(final int idx) {
-            return this.widgets.get(idx);
+        public PdfDictionary getWidget(final int idx) {
+            return (PdfDictionary) this.widgets.get(idx);
         }
 
         /**
@@ -1388,8 +2014,8 @@ public class AcroFields {
          * @param idx instance index
          * @return reference to the given field instance
          */
-        PdfIndirectReference getWidgetRef(final int idx) {
-            return this.widget_refs.get(idx);
+        public PdfIndirectReference getWidgetRef(final int idx) {
+            return (PdfIndirectReference) this.widget_refs.get(idx);
         }
 
         /**
@@ -1398,7 +2024,7 @@ public class AcroFields {
          * @since 2.1.5
          * @param widgRef
          */
-        private void addWidgetRef(final PdfIndirectReference widgRef) {
+        void addWidgetRef(final PdfIndirectReference widgRef) {
             this.widget_refs.add(widgRef);
         }
 
@@ -1412,8 +2038,8 @@ public class AcroFields {
          * @param idx  instance index
          * @return the merged dictionary for the given instance
          */
-        PdfDictionary getMerged(final int idx) {
-            return this.merged.get(idx);
+        public PdfDictionary getMerged(final int idx) {
+            return (PdfDictionary) this.merged.get(idx);
         }
 
         /**
@@ -1433,8 +2059,8 @@ public class AcroFields {
          * @param idx
          * @return remember, pages are "1-indexed", not "0-indexed" like field instances.
          */
-        Integer getPage(final int idx) {
-            return this.page.get(idx);
+        public Integer getPage(final int idx) {
+            return (Integer) this.page.get(idx);
         }
 
         /**
@@ -1444,7 +2070,7 @@ public class AcroFields {
          * @param pg
          */
         void addPage(final int pg) {
-            this.page.add(Integer.valueOf(pg));
+            this.page.add(new Integer(pg));
         }
 
         /**
@@ -1454,7 +2080,7 @@ public class AcroFields {
          * @param idx
          */
         void forcePage(final int idx, final int pg) {
-            this.page.set(idx, Integer.valueOf( pg ));
+            this.page.set(idx, new Integer( pg ));
         }
 
         /**
@@ -1464,8 +2090,8 @@ public class AcroFields {
          * @param idx
          * @return tab index of the given field instance
          */
-        Integer getTabOrder(final int idx) {
-            return this.tabOrder.get(idx);
+        public Integer getTabOrder(final int idx) {
+            return (Integer) this.tabOrder.get(idx);
         }
 
         /**
@@ -1475,21 +2101,38 @@ public class AcroFields {
          * @param order
          */
         void addTabOrder(final int order) {
-            this.tabOrder.add(Integer.valueOf(order));
+            this.tabOrder.add(new Integer(order));
         }
     }
 
-    /**
-     * Gets the field names that have signatures and are signed.
-     *
-     * @return the field names that have signatures and are signed
-     */
+    private static class InstHit {
+        IntHashtable hits;
+        public InstHit(final int inst[]) {
+            if (inst == null) {
+				return;
+			}
+            this.hits = new IntHashtable();
+            for (final int element : inst) {
+				this.hits.put(element, 1);
+			}
+        }
+
+        public boolean isHit(final int n) {
+            if (this.hits == null) {
+				return true;
+			}
+            return this.hits.containsKey(n);
+        }
+    }
+
+    /** Gets the field names that have signatures and are signed.
+     * @return the field names that have signatures and are signed. */
     public List<String> getSignatureNames() {
         if (this.sigNames != null) {
-			return new ArrayList<String>(this.sigNames.keySet());
+			return new ArrayList(this.sigNames.keySet());
 		}
-        this.sigNames = new LinkedHashMap<String, int[]>();
-        final ArrayList<Object[]> sorter = new ArrayList<Object[]>();
+        this.sigNames = new HashMap();
+        final ArrayList sorter = new ArrayList();
         for (final Object element : this.fields.entrySet()) {
             final Map.Entry entry = (Map.Entry)element;
             final Item item = (Item)entry.getValue();
@@ -1518,30 +2161,27 @@ public class AcroFields {
         }
         Collections.sort(sorter, new AcroFields.SorterComparator());
         if (!sorter.isEmpty()) {
-            if (((int[])sorter.get(sorter.size() - 1)[1])[0] == this.reader.getFileLength()) {
+            if (((int[])((Object[])sorter.get(sorter.size() - 1))[1])[0] == this.reader.getFileLength()) {
 				this.totalRevisions = sorter.size();
 			} else {
 				this.totalRevisions = sorter.size() + 1;
 			}
             for (int k = 0; k < sorter.size(); ++k) {
-                final Object objs[] = sorter.get(k);
+                final Object objs[] = (Object[])sorter.get(k);
                 final String name = (String)objs[0];
                 final int p[] = (int[])objs[1];
                 p[1] = k + 1;
                 this.sigNames.put(name, p);
             }
         }
-        return new ArrayList<String>(this.sigNames.keySet());
+        return new ArrayList(this.sigNames.keySet());
     }
 
-    /**
-     * Gets the field names that have blank signatures.
-     *
-     * @return the field names that have blank signatures
-     */
-    public ArrayList<String> getBlankSignatureNames() {
+    /** Gets the field names that have blank signatures.
+     * @return the field names that have blank signatures. */
+    public List<String> getBlankSignatureNames() {
         getSignatureNames();
-        final ArrayList<String> sigs = new ArrayList<String>();
+        final ArrayList sigs = new ArrayList();
         for (final Object element : this.fields.entrySet()) {
             final Map.Entry entry = (Map.Entry)element;
             final Item item = (Item)entry.getValue();
@@ -1552,7 +2192,7 @@ public class AcroFields {
             if (this.sigNames.containsKey(entry.getKey())) {
 				continue;
 			}
-            sigs.add(entry.getKey().toString());
+            sigs.add(entry.getKey());
         }
         return sigs;
     }
@@ -1575,7 +2215,21 @@ public class AcroFields {
         return merged.getAsDict(PdfName.V);
     }
 
-
+    /**
+     * Checks is the signature covers the entire document or just part of it.
+     *
+     * @param name the signature field name
+     * @return <CODE>true</CODE> if the signature covers the entire document,
+     * <CODE>false</CODE> otherwise
+     */
+    public boolean signatureCoversWholeDocument(String name) {
+        getSignatureNames();
+        name = getTranslatedFieldName(name);
+        if (!this.sigNames.containsKey(name)) {
+			return false;
+		}
+        return ((int[])this.sigNames.get(name))[0] == this.reader.getFileLength();
+    }
 
     /**
      * Verifies a signature. An example usage is:
@@ -1638,7 +2292,7 @@ public class AcroFields {
      * @param provider the provider or <code>null</code> for the default provider
      * @return a <CODE>PdfPKCS7</CODE> class to continue the verification
      */
-    private PdfPKCS7 verifySignature(final String name, final String provider) {
+    public PdfPKCS7 verifySignature(final String name, final String provider) {
         final PdfDictionary v = getSignatureDictionary(name);
         if (v == null) {
 			return null;
@@ -1650,8 +2304,7 @@ public class AcroFields {
             if (sub.equals(PdfName.ADBE_X509_RSA_SHA1)) {
                 final PdfString cert = v.getAsString(PdfName.CERT);
                 pk = new PdfPKCS7(contents.getOriginalBytes(), cert.getBytes(), provider);
-            }
-            else {
+            } else {
 				pk = new PdfPKCS7(contents.getOriginalBytes(), provider);
 			}
             updateByteRange(pk, v);
@@ -1661,12 +2314,11 @@ public class AcroFields {
 			}
             final PdfObject obj = PdfReader.getPdfObject(v.get(PdfName.NAME));
             if (obj != null) {
-            	if (obj.isString()) {
-            		pk.setSignName(((PdfString)obj).toUnicodeString());
-            	}
-            	else if(obj.isName()) {
-            		pk.setSignName(PdfName.decodeName(obj.toString()));
-            	}
+              if (obj.isString()) {
+				pk.setSignName(((PdfString)obj).toUnicodeString());
+			} else if(obj.isName()) {
+				pk.setSignName(PdfName.decodeName(obj.toString()));
+			}
             }
             str = v.getAsString(PdfName.REASON);
             if (str != null) {
@@ -1707,13 +2359,11 @@ public class AcroFields {
             throw new ExceptionConverter(e);
         }
         finally {
-            try{rf.close();}catch(final Exception e){
-            	// Vacio
-            }
+            try{rf.close();}catch(final Exception e){}
         }
     }
 
-    public void markUsed(final PdfObject obj) {
+    private void markUsed(final PdfObject obj) {
         if (!this.append) {
 			return;
 		}
@@ -1730,50 +2380,6 @@ public class AcroFields {
         return this.totalRevisions;
     }
 
-
-
-
-
-    /**
-     * Gets the appearances cache.
-     *
-     * @return the appearances cache
-     * @since	2.1.5	this method used to return a HashMap
-     */
-    public Map<String, TextField> getFieldCache() {
-        return this.fieldCache;
-    }
-
-    /**
-     * Sets a cache for field appearances. Parsing the existing PDF to
-     * create a new TextField is time expensive. For those tasks that repeatedly
-     * fill the same PDF with different field values the use of the cache has dramatic
-     * speed advantages. An example usage:
-     * <p>
-     * <pre>
-     * String pdfFile = ...;// the pdf file used as template
-     * ArrayList xfdfFiles = ...;// the xfdf file names
-     * ArrayList pdfOutFiles = ...;// the output file names, one for each element in xpdfFiles
-     * HashMap cache = new LinkedHashMap();// the appearances cache
-     * PdfReader originalReader = new PdfReader(pdfFile);
-     * for (int k = 0; k &lt; xfdfFiles.size(); ++k) {
-     *    PdfReader reader = new PdfReader(originalReader);
-     *    XfdfReader xfdf = new XfdfReader((String)xfdfFiles.get(k));
-     *    PdfStamper stp = new PdfStamper(reader, new FileOutputStream((String)pdfOutFiles.get(k)));
-     *    AcroFields af = stp.getAcroFields();
-     *    af.setFieldCache(cache);
-     *    af.setFields(xfdf);
-     *    stp.close();
-     * }
-     * </pre>
-     *
-     * @param fieldCache a Map that will carry the cached appearances
-     * @since	2.1.5	this method used to take a HashMap as parameter
-     */
-    public void setFieldCache(final Map<String, TextField> fieldCache) {
-        this.fieldCache = fieldCache;
-    }
-
     /**
      * Gets this <CODE>field</CODE> revision.
      *
@@ -1786,7 +2392,7 @@ public class AcroFields {
         if (!this.sigNames.containsKey(field)) {
 			return 0;
 		}
-        return this.sigNames.get(field)[1];
+        return ((int[])this.sigNames.get(field))[1];
     }
 
     /**
@@ -1803,14 +2409,78 @@ public class AcroFields {
         if (!this.sigNames.containsKey(field)) {
 			return null;
 		}
-        final int length = this.sigNames.get(field)[0];
+        final int length = ((int[])this.sigNames.get(field))[0];
         final RandomAccessFileOrArray raf = this.reader.getSafeFile();
         raf.reOpen();
         raf.seek(0);
         return new RevisionStream(raf, length);
     }
 
-    private static final HashMap<String, String[]> stdFieldFontNames = new LinkedHashMap<String, String[]>();
+    /**
+     * Gets the appearances cache.
+     *
+     * @return the appearances cache
+     * @since	2.1.5	this method used to return a HashMap
+     */
+    public Map getFieldCache() {
+        return this.fieldCache;
+    }
+
+    /**
+     * Sets a cache for field appearances. Parsing the existing PDF to
+     * create a new TextField is time expensive. For those tasks that repeatedly
+     * fill the same PDF with different field values the use of the cache has dramatic
+     * speed advantages. An example usage:
+     * <p>
+     * <pre>
+     * String pdfFile = ...;// the pdf file used as template
+     * ArrayList xfdfFiles = ...;// the xfdf file names
+     * ArrayList pdfOutFiles = ...;// the output file names, one for each element in xpdfFiles
+     * HashMap cache = new HashMap();// the appearances cache
+     * PdfReader originalReader = new PdfReader(pdfFile);
+     * for (int k = 0; k &lt; xfdfFiles.size(); ++k) {
+     *    PdfReader reader = new PdfReader(originalReader);
+     *    XfdfReader xfdf = new XfdfReader((String)xfdfFiles.get(k));
+     *    PdfStamper stp = new PdfStamper(reader, new FileOutputStream((String)pdfOutFiles.get(k)));
+     *    AcroFields af = stp.getAcroFields();
+     *    af.setFieldCache(cache);
+     *    af.setFields(xfdf);
+     *    stp.close();
+     * }
+     * </pre>
+     *
+     * @param fieldCache a Map that will carry the cached appearances
+     * @since	2.1.5	this method used to take a HashMap as parameter
+     */
+    public void setFieldCache(final Map fieldCache) {
+        this.fieldCache = fieldCache;
+    }
+
+    /**
+     * Sets extra margins in text fields to better mimic the Acrobat layout.
+     *
+     * @param extraMarginLeft the extra margin left
+     * @param extraMarginTop the extra margin top
+     */
+    public void setExtraMargin(final float extraMarginLeft, final float extraMarginTop) {
+        this.extraMarginLeft = extraMarginLeft;
+        this.extraMarginTop = extraMarginTop;
+    }
+
+    /**
+     * Adds a substitution font to the list. The fonts in this list will be used if the original
+     * font doesn't contain the needed glyphs.
+     *
+     * @param font the font
+     */
+    public void addSubstitutionFont(final BaseFont font) {
+        if (this.substitutionFonts == null) {
+			this.substitutionFonts = new ArrayList();
+		}
+        this.substitutionFonts.add(font);
+    }
+
+    private static final HashMap stdFieldFontNames = new HashMap();
 
     /**
      * Holds value of property totalRevisions.
@@ -1822,30 +2492,80 @@ public class AcroFields {
      *
      * @since	2.1.5	this used to be a HashMap
      */
-    private Map<String, TextField> fieldCache;
+    private Map fieldCache;
 
     static {
-        stdFieldFontNames.put("CoBO", new String[]{"Courier-BoldOblique"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("CoBo", new String[]{"Courier-Bold"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("CoOb", new String[]{"Courier-Oblique"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("Cour", new String[]{"Courier"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("HeBO", new String[]{"Helvetica-BoldOblique"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("HeBo", new String[]{"Helvetica-Bold"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("HeOb", new String[]{"Helvetica-Oblique"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("Helv", new String[]{"Helvetica"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("Symb", new String[]{"Symbol"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("TiBI", new String[]{"Times-BoldItalic"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("TiBo", new String[]{"Times-Bold"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("TiIt", new String[]{"Times-Italic"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("TiRo", new String[]{"Times-Roman"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("ZaDb", new String[]{"ZapfDingbats"}); //$NON-NLS-1$ //$NON-NLS-2$
-        stdFieldFontNames.put("HySm", new String[]{"HYSMyeongJo-Medium", "UniKS-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-        stdFieldFontNames.put("HyGo", new String[]{"HYGoThic-Medium", "UniKS-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-        stdFieldFontNames.put("KaGo", new String[]{"HeiseiKakuGo-W5", "UniKS-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-        stdFieldFontNames.put("KaMi", new String[]{"HeiseiMin-W3", "UniJIS-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-        stdFieldFontNames.put("MHei", new String[]{"MHei-Medium", "UniCNS-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-        stdFieldFontNames.put("MSun", new String[]{"MSung-Light", "UniCNS-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-        stdFieldFontNames.put("STSo", new String[]{"STSong-Light", "UniGB-UCS2-H"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+        stdFieldFontNames.put("CoBO", new String[]{"Courier-BoldOblique"});
+        stdFieldFontNames.put("CoBo", new String[]{"Courier-Bold"});
+        stdFieldFontNames.put("CoOb", new String[]{"Courier-Oblique"});
+        stdFieldFontNames.put("Cour", new String[]{"Courier"});
+        stdFieldFontNames.put("HeBO", new String[]{"Helvetica-BoldOblique"});
+        stdFieldFontNames.put("HeBo", new String[]{"Helvetica-Bold"});
+        stdFieldFontNames.put("HeOb", new String[]{"Helvetica-Oblique"});
+        stdFieldFontNames.put("Helv", new String[]{"Helvetica"});
+        stdFieldFontNames.put("Symb", new String[]{"Symbol"});
+        stdFieldFontNames.put("TiBI", new String[]{"Times-BoldItalic"});
+        stdFieldFontNames.put("TiBo", new String[]{"Times-Bold"});
+        stdFieldFontNames.put("TiIt", new String[]{"Times-Italic"});
+        stdFieldFontNames.put("TiRo", new String[]{"Times-Roman"});
+        stdFieldFontNames.put("ZaDb", new String[]{"ZapfDingbats"});
+        stdFieldFontNames.put("HySm", new String[]{"HYSMyeongJo-Medium", "UniKS-UCS2-H"});
+        stdFieldFontNames.put("HyGo", new String[]{"HYGoThic-Medium", "UniKS-UCS2-H"});
+        stdFieldFontNames.put("KaGo", new String[]{"HeiseiKakuGo-W5", "UniKS-UCS2-H"});
+        stdFieldFontNames.put("KaMi", new String[]{"HeiseiMin-W3", "UniJIS-UCS2-H"});
+        stdFieldFontNames.put("MHei", new String[]{"MHei-Medium", "UniCNS-UCS2-H"});
+        stdFieldFontNames.put("MSun", new String[]{"MSung-Light", "UniCNS-UCS2-H"});
+        stdFieldFontNames.put("STSo", new String[]{"STSong-Light", "UniGB-UCS2-H"});
+    }
+
+    private static class RevisionStream extends InputStream {
+        private final byte b[] = new byte[1];
+        private final RandomAccessFileOrArray raf;
+        private final int length;
+        private int rangePosition = 0;
+        private boolean closed;
+
+        private RevisionStream(final RandomAccessFileOrArray raf, final int length) {
+            this.raf = raf;
+            this.length = length;
+        }
+
+        @Override
+		public int read() throws IOException {
+            final int n = read(this.b);
+            if (n != 1) {
+				return -1;
+			}
+            return this.b[0] & 0xff;
+        }
+
+        @Override
+		public int read(final byte[] b, final int off, final int len) throws IOException {
+            if (b == null) {
+                throw new NullPointerException();
+            } else if (off < 0 || off > b.length || len < 0 ||
+            off + len > b.length || off + len < 0) {
+                throw new IndexOutOfBoundsException();
+            } else if (len == 0) {
+                return 0;
+            }
+            if (this.rangePosition >= this.length) {
+                close();
+                return -1;
+            }
+            final int elen = Math.min(len, this.length - this.rangePosition);
+            this.raf.readFully(b, off, elen);
+            this.rangePosition += elen;
+            return elen;
+        }
+
+        @Override
+		public void close() throws IOException {
+            if (!this.closed) {
+                this.raf.close();
+                this.closed = true;
+            }
+        }
     }
 
     private static class SorterComparator implements Comparator {
@@ -1897,7 +2617,7 @@ public class AcroFields {
      * @param field the field name that should be a pushbutton
      * @return a new pushbutton or <CODE>null</CODE> if the field is not a pushbutton
      */
-    private PushbuttonField getNewPushbuttonFromField(final String field) {
+    public PushbuttonField getNewPushbuttonFromField(final String field) {
         return getNewPushbuttonFromField(field, 0);
     }
 
@@ -1912,7 +2632,7 @@ public class AcroFields {
      *
      * @since 2.0.7
      */
-    private PushbuttonField getNewPushbuttonFromField(final String field, final int order) {
+    public PushbuttonField getNewPushbuttonFromField(final String field, final int order) {
         try {
             if (getFieldType(field) != FIELD_TYPE_PUSHBUTTON) {
 				return null;
@@ -1991,7 +2711,7 @@ public class AcroFields {
      * @return <CODE>true</CODE> if the field was replaced, <CODE>false</CODE> if the field
      * was not a pushbutton
      */
-    private boolean replacePushbuttonField(final String field, final PdfFormField button) {
+    public boolean replacePushbuttonField(final String field, final PdfFormField button) {
         return replacePushbuttonField(field, button, 0);
     }
 
@@ -2008,7 +2728,7 @@ public class AcroFields {
      *
      * @since 2.0.7
      */
-    private boolean replacePushbuttonField(final String field, final PdfFormField button, final int order) {
+    public boolean replacePushbuttonField(final String field, final PdfFormField button, final int order) {
         if (getFieldType(field) != FIELD_TYPE_PUSHBUTTON) {
 			return false;
 		}
@@ -2037,56 +2757,6 @@ public class AcroFields {
             merged.put(key, button.get(key));
         }
         return true;
-    }
-
-    private static class RevisionStream extends InputStream {
-        private final byte b[] = new byte[1];
-        private final RandomAccessFileOrArray raf;
-        private final int length;
-        private int rangePosition = 0;
-        private boolean closed;
-
-        private RevisionStream(final RandomAccessFileOrArray raf, final int length) {
-            this.raf = raf;
-            this.length = length;
-        }
-
-        @Override
-		public int read() throws IOException {
-            final int n = read(this.b);
-            if (n != 1) {
-				return -1;
-			}
-            return this.b[0] & 0xff;
-        }
-
-        @Override
-		public int read(final byte[] b, final int off, final int len) throws IOException {
-            if (b == null) {
-                throw new NullPointerException();
-            } else if (off < 0 || off > b.length || len < 0 ||
-            off + len > b.length || off + len < 0) {
-                throw new IndexOutOfBoundsException();
-            } else if (len == 0) {
-                return 0;
-            }
-            if (this.rangePosition >= this.length) {
-                close();
-                return -1;
-            }
-            final int elen = Math.min(len, this.length - this.rangePosition);
-            this.raf.readFully(b, off, elen);
-            this.rangePosition += elen;
-            return elen;
-        }
-
-        @Override
-		public void close() throws IOException {
-            if (!this.closed) {
-                this.raf.close();
-                this.closed = true;
-            }
-        }
     }
 
 }
